# railtracks

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  example.py  mkdocs.yml  playground.py  pyproject.toml  requirements-dev.txt  sandbox.py  sandbox2.py  sandbox3.py  traceback_playground.ipynb
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yml  documentation.md  documentation.yaml  feature_request.md  feature_request.yaml  general.yaml  question.md  question.yaml  tech_debt.yaml  visualizer.yaml
.github/actions/install-deps/: action.yaml
.github/workflows/: build.yaml  e2e.yaml  pr_tests.yaml  push.yaml  push_main.yaml  release.yaml  release_docs.yaml  release_package.yaml
bots/docs_rag/: extract_snippets.py
bots/docs_rag/tests/: sample_script.py  test_extract_snippets.py
docs/: index.html  index.md
docs/advanced_usage/: config.md  context.md  index.md  node_builder.md  prompt_injection.md  session.md
docs/api_reference/: index.html  railtracks.html  search.js
docs/api_reference/components/: api_provider_wrappers.md  chat_tool_call_node.md  chat_ui.md  chunking_service.md  cli_entry_point.md  cloud_model_wrappers.md  context_management.md  embedding_service.md  exception_handling.md  execution_info.md  executor_configuration.md  (+47 more)
docs/background/: RAG.md  agents.md  async_await.md  tools.md  vector_store.md
docs/css/: extra.css
docs/deployments/: docker.md
docs/guides/: agents.md  index.md  tools.md
docs/human_in_the_loop/: hil.md  local_chat_ui.md  overview.md
docs/llm_support/: config.md  index.md  prompts.md  providers.md  streaming.md
docs/mcp/: MCP_tools_in_RC.md  MCP_tools_in_RT.md  RCtoMCP.md  RTtoMCP.md  index.md
docs/observability/: broadcasting.md  chat.md  error_handling.md  logging.md  streaming.md  visualization.md
docs/overrides/: main.html
docs/quickstart/: quickstart.md
docs/scripts/: MCP_tools_in_RT.py  RTtoMCP.py  _logging.py  agents_as_tools.py  async_await.py  broadcast.py  chatui.py  chroma.py  context.py  error_handling.py  first_agent.py  flows.py  multimodal.py  prompts.py  providers.py  quickstart.py  rag_examples.py  requirements.txt  session.py  streaming.py  tools.py  tools_mcp_guides.py  vector_store_tutorial.py  visualization.py
docs/system_internals/: Coordinator.md  PubSub.md  Runner.md  concepts.md  coordinator.md  index.md  node.md  overview.md  pubsub.md  session.md
docs/tools/: create_your_own.md  index.md
docs/tools_mcp/: RAG.md  create_your_own.md  index.md  tools_mcp.md
docs/tutorials/: byfa.md  flows.md  multi_agent.md  rag_tutorial.md  ryfa.md  vector_store_tutorial.md  yet_another_weather_bot.md
docs/vector_stores/: vector_store_info.md
evaluations/: sync_async_benchmark.py
examples/: cot-reasoning.ipynb  hello_world.ipynb  llm-toolkit.ipynb  llms.ipynb  mcp_demo.py  mcp_example.py  rag_agent.ipynb  simple-example.ipynb  structured-llm.ipynb  terminal-llm-example.ipynb  terminal-llm.ipynb  test_mcp.py  tool-call-llm.ipynb  tool-call-llm.py
examples/cookbook/: llm-toolkit.ipynb  simple-example.ipynb
examples/demos/: notion_demo.py
examples/integration/: github_integration.py
examples/integrations/: github_integration.py  notion_integration.py  sandbox_python_integration.py  shell_integration.py  slack_integration.py  webseach_integration.py
examples/rc_basics/: mcp_demo.py  mcp_example.py  structured-llm.ipynb  terminal-llm-example.ipynb  tool-call-llm.ipynb
examples/rt_basics/: cot-reasoning.ipynb  llm-toolkit.ipynb  mcp_demo.py  mcp_example.py  mcp_jupyter.ipynb  simple-example.ipynb  structured-llm.ipynb  terminal-llm-example.ipynb  terminal-llm.ipynb  tool-call-llm.ipynb
examples/sample_agents/: Notion_Demo.py  notion_agent.py
experiments/: sandbox.py
railtracks-cli/: README.md  pyproject.toml
railtracks-cli/src/railtracks/: __init__.py  __main__.py
scripts/: check_dependencies_sorted.py  check_licenses.sh  docs_validation.sh  generate_api_docs.sh  publish_to_azure_artifacts.py
scripts/evaluations/: sync_async_benchmark.py
src/railtownai_rc/: __init__.py
src/railtracks/: __init__.py  info.py  run.py
src/requestcompletion/: __init__.py  config.py  context.py  info.py  run.py
tests/: test_rag.py
tests/fixtures/: nodes.py
tests/rc_tests/: test_info.py
tests/unit_tests/: conftest.py  test_config.py  test_exceptions.py  test_info.py  test_run.py
(+702 files in other folders)
