[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "requestcompletion"
authors = [
    { name = "Logan Underwood", email = "logan@railtown.ai" },
    { name = "Levi Varsanyi", email = "levi@railtownn.ai" },
    { name = "Jaime Bueza", email = "jaime@railtown.ai" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "colorama >= 0.4.6",
    "litellm >= 1.70.2",
    "mcp >= 1.9.0",
    "openai <= 1.81.0",
    "pydantic >= 2.5.3,<3",
    "python-dotenv >= 1.0.0",
    "pyvis >= 0.3.1",
    "requests >=2.31,<3",
    "requests-mock >= 1.12.1",
    "sseclient >= 0.0.27",
]

[project.urls]
Home = "https://railtown.ai"


[tool.flit.module]
name = "requestcompletion"

[tool.ruff]
target-version = "py310"
line-length = 88

format.indent-style = "space"
format.docstring-code-format = true

lint.select = [
    "E",
    "W",
    "F",
    "C",
    "N",
]

lint.ignore = ["E501", "W191", "E114", "E117", "D206", "D300", "Q000", "Q002", "Q003", "COM812", "COM819"]

fix = true
lint.fixable = ["F401", "F841", ]

exclude = [".git", "examples", "docs", ".venv", ".conda", "tests", "src/requestcompletion/visuals"]



lint.mccabe.max-complexity = 10




[project.optional-dependencies]
test = ["pytest >=7.1.2"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
