[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
target-version = "py310"
line-length = 88

format.indent-style = "space"
format.docstring-code-format = true

lint.select = [
    "E",
    "I",
    "W",
    "F",
    "C",
    "N",
]

lint.ignore = [
    "E501", "W191", "E114", "E117",
    "D206", "D300",
    "Q000", "Q002", "Q003",
    "COM812", "COM819",
    "W291", "W292", "W293"
]

fix = true
lint.fixable = ["F401", "F841", "I001"]

exclude = [".git", "examples", "docs", ".venv", ".conda", "tests"]

lint.mccabe.max-complexity = 10


[tool.pytest.ini_options]
asyncio_mode = "auto"


