
[project]
name = "railtracks-workspace"
version = "0.0.0"
description = "Root workspace for dev tools and workspace packages"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["railtracks", "railtracks-cli"]


[tool.uv.sources]
railtracks = { workspace = true }
railtracks-cli = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/*",
]


[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "pdoc>=15.0.4"
]
test = [
    "pytest>=8.4.0",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout"
]
lint = [
    "ruff>=0.11.13"
]

dev = [
{include-group = "docs"},
{include-group = "test"},
{include-group = "lint"}
]



[tool.ruff]
target-version = "py310"
line-length = 88

format.indent-style = "space"
format.docstring-code-format = true

lint.select = [
    "E",
    "I",
    "W",
    "F",
    "C",
    "N",
]

lint.ignore = [
    "E501", "W191", "E114", "E117",
    "D206", "D300",
    "Q000", "Q002", "Q003",
    "COM812", "COM819",
    "W291", "W292", "W293"
]

fix = true
lint.fixable = ["F401", "F841", "I001"]

exclude = [".git", "examples", "docs", ".venv", "tests"]

lint.mccabe.max-complexity = 10


[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--import-mode=importlib",
]